<resources>
    <string name="app_name">LogRegForm</string>
    <string name="fullNameReg">Full Name</string>
    <string name="emailReg">Email</string>
    <string name="passwordReg">Password</string>
    <string name="sign_upReg">Sign up</string>
    <string name="sign_inLog">Sign in</string>
    <string name="confPwdReg">Confirm Password</string>
    <string name="usernameReg">Username</string>

    <string name="signin_redirect">Already a member? Sign in!</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="signup_redirect">Don\'t have an account? Register here!</string>

    <string name="title_activity_maps">MapsActivity</string>

    <string name="githublink">FORK US ON <a href="https://github.com/mnsuhairil/individual-assignment-su.git">GITHUB</a></string>
    <string name="youtubelink">WATCH US ON <a href="https://www.youtube.com/channel/UCPT7Ra1nF9luZGZbiWcUmqA/featured">YOUTUBE</a></string>
    <string name="emaillink">CONTACT US on <a href="mailto:mnsuhairil@gmail.com">EMAIL</a></string>

</resources>
